[package]
name = "rosalind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "hamm"
path = "src/hamm.rs"

[[bin]]
name = "dna"
path = "src/dna.rs"

[[bin]]
name = "rna"
path = "src/rna.rs"

[[bin]]
name = "revc"
path = "src/revc.rs"

[[bin]]
name = "fib_rabbit"
path = "src/fib_rabbit.rs"

[[bin]]
name = "mortal_rabbits"
path = "src/mortal_rabbits.rs"

[[bin]]
name = "gc_content"
path = "src/gc_content.rs"

[dependencies]
